# favai

./: .gitignore  Cargo.toml  Makefile  README.md  USAGE.md  favai-pack.toml  favai-sync-and-registry.md  progress.md
crates/favai/: Cargo.toml
crates/favai-cli/: Cargo.toml
crates/favai-cli/src/: daemon.rs  doctor.rs  main.rs
crates/favai/src/: approvals.rs  builder.rs  error.rs  git.rs  lib.rs  mcp_bridge.rs
crates/favai/src/agent/: mod.rs  periodic.rs  reload_event.rs  shutdown.rs  sources.rs  start.rs  sync_now.rs
crates/favai/src/config/: mod.rs  parse.rs  validate.rs
crates/favai/src/sync/: clone.rs  fetch.rs  mod.rs  recovery.rs  report.rs  stage.rs  swap.rs
crates/favai/src/watch/: debounce.rs  mod.rs  setup.rs
crates/favai/tests/: approval_drift_test.rs  approvals_jsonl_test.rs  demo_e2e_test.rs  sync_e2e_test.rs
crates/favai/tests/config/: parse_test.rs  validate_test.rs
crates/favai/tests/sync/: recovery_test.rs  stage_test.rs  swap_test.rs
crates/rmcp-demo/: Cargo.toml
crates/rmcp-demo/src/: main.rs
demo/: run-demo.sh
demo/skills/hello/: SKILL.md
skills/pr-review/: SKILL.md
skills/safe-refactor/: SKILL.md
skills/ship-it-check/: SKILL.md
skills/ship-it-check/resources/: checklist.md
