[package]
name        = "rmcp-demo"
version     = "0.1.0"
edition     = "2021"
publish     = false
description = "Minimal MCP stdio server using the official rmcp SDK — A/B test against starter-mcp."

[[bin]]
name = "rmcp-demo"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.8", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
